# analytics.alexwlchan.net

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  backup_analytics.sh  dashboard.py  dev_requirements.in  dev_requirements.txt  download_db.sh  get_netlify_usage.py  metadata.json  pyproject.toml  referrers.py  requirements.in  requirements.txt  restart.sh  schema.sql  test_app.py  test_referrers.py  test_utils.py  update_normalised_referrer.py  update_posts.py  utils.py
.github/workflows/: test.yml
certbot/: renew_certs.sh
nginx/: README.md  analytics.alexwlchan.net.conf  renew_certs.sh
referrers/: index.html  referrer_metadata.js  verify.py
referrers/archive/brainbaking.com/: august-2022.webarchive
referrers/archive/bryanbraun.com/: links-8.webarchive
scripts/: restart.sh  update_normalised_referrer.py
src/analytics/: __init__.py  app.py  countries.py  database.py  date_helpers.py  fetch_netlify_bandwidth.py  fetch_rss_feed.py  fetchers.py  referrers.py  types.py  utils.py
static/: style.css
templates/: base.html  dashboard.html  exclusion_cookie.html  index.html
tests/: conftest.py  test_app.py  test_conftest.py  test_countries.py  test_database.py  test_fetch_netlify_bandwidth.py  test_fetch_rss_feed.py  test_fetchers.py  test_referrers.py  test_utils.py
tests/cassettes/: test_dashboard_can_be_rendered.yaml  test_fetch_netlify_bandwidth.yaml  test_fetch_netlify_bandwidth_is_cached.yaml  test_fetch_rss_feed_entries.yaml  test_it_skips_if_no_new_entries.yaml
tests/stubs/: feedparser.pyi  mmdb_writer.pyi  netaddr.pyi  vcr.pyi
(+14 files in other folders)
